# fleet

./: .env.example  .gitignore  README.md  docker-compose.yaml
.cursor/rules/: general.mdc  planning.mdc
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css  stack.ts
client/src/components/api/: use-api.ts  use-auth-client.ts  use-query-client.ts  use-sse-stream.ts
client/src/components/auth/: use-gh-token.ts
client/src/components/chat/: chat-container.tsx  chat-context.tsx  chat-input.tsx  index.ts  message-utils.ts  tool-block.tsx  (+2 more)
client/src/lib/: date.ts  stream.ts  utils.ts
server/: Dockerfile  alembic.ini  pyproject.toml
server/api/: __main__.py  app.py  settings.py
server/api/agent_tools/: executor.py  loop.py  models.py  tools.py
server/api/auth/: dependencies.py  resource_auth.py  settings.py  views.py
server/api/database/: base_service.py  dependencies.py  models.py  settings.py  utils.py
server/api/llm/: service.py  settings.py
server/api/middleware/: error_handler.py
server/api/project/: models.py  service.py  views.py
server/api/task/: cleanup_service.py  flows.py  models.py  queue_service.py  service.py  settings.py  views.py
server/migrations/: env.py
server/migrations/versions/: 49c2664ad338_add_message_and_content_block_tables.py  4dd8a6c2db98_start.py  73cd148a93db_update_task_status.py  a28de707f565_sbx_id.py  c853168efbfe_ext_id.py  cda405101112_add_sandbox_state_and_last_used_at_.py  f8febbf9caa6_project_files.py  fb2b0ea876d8_add_task_table.py
server/scripts/: call.py
(+27 files in other folders)
